--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
         <span>M</span><span>i</span><span>n</span><span>g</span><span>l</span><span>e</span>
     </h1>
     <form action="https://www.google.com/search" method="GET">
-        <div class="mx-auto mt-5 search-bar input-group mb-3">
-            <input name="q" type="text" class="form-control rounded-pill" placeholder="Mingle 검색 또는 URL 입력" aria-label="Recipient's username" aria-describedby="button-addon2">
-        </div>
+        <div class="search-container align-center">
+            <input type="checkbox" id="search-trigger">
+            <label for="search-trigger">
+              <div class="search-toggle"></div>
+            </label>
+            <label class="search-field">
+              <input name = "q" type="text" name="searchPhrase" placeholder="Search for something...">
+              <div class="corners"></div>
+            </label>
+          </div>
     </form>
     
 </body>
